--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">InstaBus</string>
+    <string name="instabus">InstaBus</string>
+    <string name="barcelone">barcelone</string>
 </resources>
