--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="instabus">InstaBus</string>
     <string name="barcelone">barcelone</string>
     <string name="liste_des_stations_de_bus">Liste des stations de bus</string>
+    <string name="instabusimage">Instabus</string>
+    <string name="station_image">Station image</string>
+    <string name="about">about</string>
+    <string name="accueil">Accueil</string>
+    <string name="stationview">stationview</string>
+    <string name="favoris">favoris</string>
+    <string name="open_nav_drawer">Open Navigation Drawer</string>
+    <string name="close_nav_drawer">Close Navigation Drawer</string>
+    <string name="param_tres">paramètres</string>
+    <string name="about1">about1</string>
 </resources>
