--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="close_nav_drawer">Close Navigation Drawer</string>
     <string name="param_tres">paramètres</string>
     <string name="about1">about1</string>
+    <string name="image_de_station">image de station</string>
 </resources>
